syntax = "proto3";

package org.corfudb.runtime;
option java_package = "org.corfudb.runtime";

import "google/protobuf/descriptor.proto";
import "google/protobuf/any.proto";

message Timestamp {
    int64 epoch = 1;
    int64 sequence = 2;
}

message TableName {
    string namespace = 1;
    string table_name = 2;
}

message TableDescriptors {
    // Descriptor protobufs.
    google.protobuf.DescriptorProto keyDescriptor = 1;
    google.protobuf.DescriptorProto valueDescriptor = 2;
    google.protobuf.DescriptorProto metadataDescriptor = 3;

    // Canonical class names of the key, value and metadata classes.
    string keyClass = 4;
    string valueClass = 5;
    string metadataClass = 6;
}

message TableMetadata {
    TableName table_name = 1;
    bool disk_based = 2;
    bool cache = 3;
}

message Record {
    google.protobuf.Any payload = 1;
    google.protobuf.Any metadata = 2;
}